--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in reinforcement learning and causal representation learning. Specifically, my research focuses on the method of learning and reasoning for sequential decision making.
+                I'm interested in reinforcement learning and causal representation learning. Specifically, my research focuses on learning and reasoning methods for sequential decision making.
               </p>
             </td>
           </tr>
