--- a/index.html
+++ b/index.html
@@ -105,8 +105,20 @@
 
 
 	</tbody></table>
-
-	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Work Experience</heading>
+              <ul>
+                <li>Reserach Intern, Naver Clova, July 2020 - Dec. 2020</li>
+              </ul>
+            </td>
+          </tr>
+      </tbody>
+  </table>
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Teaching Experience</heading>
@@ -117,7 +129,8 @@
               </ul>
             </td>
           </tr>
-        </tbody></table>
+      </tbody>
+  </table>
 	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
