--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	      <li> <em>Conference on Causal Learning and Reasoning (<strong>CLeaR</strong>)</em>, 2023 </li>
               <!-- <br> -->
               <p>
-              <a href="">Paper</a> / 
+              <a href="https://openreview.net/forum?id=-aFd28Uy9td">Paper</a> / 
 	      <a href="">Code</a>
 <!--               <a href="https://sites.google.com/view/causal-sequential-decisions/home">Workshop</a> -->
               </p>
