Add Quantized LCD workshop paper and profile image

--- a/index.html
+++ b/index.html
@@ -1,161 +1,232 @@
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Yunhyeok Kwak</title>
 
-  <title>Yunhyeok Kwak</title>
-  
-  <meta name="author" content="Yunhyeok Kwak">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
-</head>
+    <meta name="author" content="Yunhyeok Kwak">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-    <tr style="padding:0px">
-      <td style="padding:0px">
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr style="padding:0px">
-<!--             <td style="padding:2.5%;width:63%;vertical-align:middle"> -->
-            <td style="padding:2.5%;width:90%;vertical-align:middle">
-              <p style="text-align:center">
-                <name>Yunhyeok Kwak</name>
-              </p>
-              <p> I am a master student at <a href="https://www.snu.ac.kr/en/">Seoul National University</a>. 
-              Prior to joining SNU, I did work for <a href="https://clova.ai/">Naver Clova AI</a> as a research intern. I received my Bachelor's degree in Computer Science at Kookmin University.
-              </p>
-              <p style="text-align:center">
-                <a href="mailto:yunh_kwak@snu.ac.kr">Email</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=rhyhnRYAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/yun-kwak">Github</a>
-              </p>
-            </td>
-<!--             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href=""><img style="width:100%;max-width:100%" alt="profile photo" src="" class="hoverZoomLink"></a>
-            </td> -->
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Research</heading>
-              <p>
-                I'm interested in reinforcement learning and causal representation learning. Specifically, my research focuses on learning and reasoning methods for sequential decision making.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-	  <tr>
-	    <td style="padding:20px;width:100%;vertical-align:middle">
-	      <heading>Publications</heading>
-	    </td>
-	  </tr>
-	</tbody></table>
-	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-		
-		
-	  <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/cssi_clear.png" alt="CSSI" width="180" style="border-style: none">
-            </td>
-            <td width="75%" valign="middle">
-              <a href="">
-                <papertitle>On Discovery of Local Independence over Continuous Variables via Neural Contextual Decomposition</papertitle>
-              </a>
-              <br>
-              <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>, <strong>Yunhyeok Kwak</strong>, Yeon-Ji Song,
-	      Byoung-Tak Zhang^,
-              <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
-	      <li> <em>Conference on Causal Learning and Reasoning (<strong>CLeaR</strong>)</em>, 2023 </li>
-              <!-- <br> -->
-              <p>
-              <a href="https://openreview.net/forum?id=-aFd28Uy9td">Paper</a> / 
-	      <a href="">Code</a>
-<!--               <a href="https://sites.google.com/view/causal-sequential-decisions/home">Workshop</a> -->
-              </p>
-            </td>
-          </tr>
-		
-		
-	  <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/selecmix.jpeg" alt="SelecMix" width="180" style="border-style: none">
-            </td>
-            <td width="75%" valign="middle">
-              <a href="https://openreview.net/pdf?id=cIpU8OzGSCU">
-                <papertitle>SelecMix: Debiased Learning by Contradicting-pair Sampling</papertitle>
-              </a>
-              <br>
-              <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>, Sangjun Lee, <strong>Yunhyeok Kwak</strong>,
-              <a href="https://coallaoh.github.io">Seong Joon Oh</a>,
-	      <a href="https://www.damienteney.info">Damien Teney</a>,
-	      <a href="http://wityworks.com">Jin-Hwa Kim</a>^,
-	      Byoung-Tak Zhang^.
-	      <li> <em>Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2022 &nbsp <font color="blue"><strong>(Scholar Award)</strong></font> </li>
-              <li> <em>ICML Workshop on Spurious Correlations, Invariance, and Stability</em>, 2022 </li>
-	      <p>
-	      <a href="https://arxiv.org/abs/2211.02291">Paper</a> / 
-<!--               <a href="https://openreview.net/forum?id=cIpU8OzGSCU">Openreview</a> /  -->
-              <a href="https://github.com/bluemoon010/selecmix">Code</a>
-              </p>
-            </td>
-          </tr>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+  </head>
 
+  <body>
+    <table
+      style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr style="padding:0px">
+          <td style="padding:0px">
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr style="padding:0px">
+                  <!--             <td style="padding:2.5%;width:63%;vertical-align:middle"> -->
+                  <td style="padding:2.5%;width:50%;vertical-align:middle">
+                    <p style="text-align:center">
+                      <name>Yunhyeok Kwak</name>
+                      <br>
+                      <korname>곽윤혁</korname>
+                    </p>
+                    <p> I am a graduate student at <a
+                        href="https://www.snu.ac.kr/en/">Seoul National
+                        University (SNU)</a>.
+                      Prior to joining SNU, I did work for <a
+                        href="https://clova.ai/">Naver Clova AI</a> as a
+                      research intern. I received my Bachelor's degree in
+                      Computer Science at Kookmin University.
+                    </p>
+                    <p style="text-align:center">
+                      <a href="mailto:yunh_kwak@snu.ac.kr">Email</a> &nbsp/&nbsp
+                      <a href="https://github.com/yun-kwak">Github</a> &nbsp/&nbsp
+                      <a href="https://twitter.com/yun_h_kwak">Twitter</a>
+                      <br>
+                      <a href="https://scholar.google.com/citations?hl=en&user=rhyhnRYAAAAJ">Google Scholar</a> &nbsp/&nbsp
+                      <a href="https://www.semanticscholar.org/author/Yunhyeok-Kwak/2190039721">Semantic Scholar</a>
+                    </p>
+                    <td style="padding:2.5%;width:45%;max-width:45%">
+                      <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpg">
+                    </td>
+                </tr>
+              </tbody></table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Research</heading>
+                    <p>
+                      My research is intensely focused on reinforcement learning and causal representation learning, especially in the context of learning and reasoning methods for sequential decision-making. 
+                    </p>
+                  </td>
+                </tr>
+              </tbody></table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Publications</heading>
+                  </td>
+                </tr>
+              </tbody></table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                  <td style="padding:20px;width:25%;vertical-align:middle">
+                    <img src="images/quantized_lcd.png" alt="Quantized LCD"
+                      width="180"
+                      style="border-style: none">
+                  </td>
+                  <td width="75%" valign="middle">
+                    <papertitle>Causal Dynamics Learning with Quantized Local
+                      Independence Discovery</papertitle>
+                    <br>
+                    <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>,
+                    <strong>Yunhyeok Kwak</strong>, Suhyung Choi,
+                    Byoung-Tak Zhang^,
+                    <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
+                    <li> ICML Workshop on Spurious Correlations, Invariance, and
+                      Stability, 2023</li>
+                    <!-- <br> -->
+                    <p>
+                      <a
+                        href="https://sites.google.com/view/scis-workshop-23/home">Workshop</a>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding:20px;width:25%;vertical-align:middle">
+                    <img src="images/cssi_clear.png" alt="CSSI" width="180"
+                      style="border-style: none">
+                  </td>
+                  <td width="75%" valign="middle">
+                    <papertitle>On Discovery of Local Independence over
+                      Continuous Variables via Neural Contextual Decomposition</papertitle>
+                    <br>
+                    <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>,
+                    <strong>Yunhyeok Kwak</strong>, Yeon-Ji Song,
+                    Byoung-Tak Zhang^,
+                    <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
+                    <li> <em>Conference on Causal Learning and Reasoning (<strong>CLeaR</strong>)</em>,
+                      2023 </li>
+                    <p>
+                      <a href="https://openreview.net/forum?id=-aFd28Uy9td">Paper</a>
+                      /
+                      <a href>Code</a>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding:20px;width:25%;vertical-align:middle">
+                    <img src="images/selecmix.jpeg" alt="SelecMix" width="180"
+                      style="border-style: none">
+                  </td>
+                  <td width="75%" valign="middle">
+                    <papertitle>SelecMix: Debiased Learning by
+                      Contradicting-pair Sampling</papertitle>
+                    <br>
+                    <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>,
+                    Sangjun Lee, <strong>Yunhyeok Kwak</strong>,
+                    <a href="https://coallaoh.github.io">Seong Joon Oh</a>,
+                    <a href="https://www.damienteney.info">Damien Teney</a>,
+                    <a href="http://wityworks.com">Jin-Hwa Kim</a>^,
+                    Byoung-Tak Zhang^.
+                    <li> <em>Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>,
+                      2022 &nbsp <font color="blue"><strong>(Scholar Award)</strong></font>
+                    </li>
+                    <li> <em>ICML Workshop on Spurious Correlations, Invariance,
+                        and Stability</em>, 2022 </li>
+                    <p>
+                      <a href="https://openreview.net/forum?id=cIpU8OzGSCU">Paper</a>
+                      /
+                      <a href="https://arxiv.org/abs/2211.02291">ArXiv</a> /
+                      <!--               <a href="https://openreview.net/forum?id=cIpU8OzGSCU">Openreview</a> /  -->
+                      <a href="https://github.com/bluemoon010/selecmix">Code</a>
+                      /
+                      <a
+                        href="https://openreview.net/group?id=ICML.cc/2022/Workshop/SCIS">Workshop</a>
+                    </p>
+                  </td>
+                </tr>
 
-	</tbody></table>
-	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-    <tbody>
-          <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Work Experience</heading>
-              <ul>
-                <li>Reserach Intern, Naver Clova, July 2020 - Dec. 2020</li>
-              </ul>
-            </td>
-          </tr>
-      </tbody>
-  </table>
-	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-    <tbody>
-          <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Teaching Experience</heading>
-              <ul>
-                <li><a href="https://bi.snu.ac.kr/Courses/4ai22s/4ai22s.html">[4190.408] Artificial Intelligence</a>, Seoul National University, 2022</li>
-                <li>Artificial Intelligence course, <a href="https://programmers.co.kr/">Programmers (Grepp)</a>, 2022-2023</li>
-                <li>NVIDIA DLI (Deep Learning Institute), NVIDIA AI Conference, 2019</li>
-              </ul>
-            </td>
-          </tr>
-      </tbody>
-  </table>
-	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Honors and Awards</heading>
-              <ul>
-                <li>Mid‑way Prize (Ranked at the top of three categories) <a href="https://proceedings.mlr.press/v123/crosby20a.html">Animal-AI Olympics</a>, NeurIPS 2019 Competition</li>
-                <li>Summa Cum Laude, 2021</li>
-                <li>Academic Scholarship, 2018-2020</li> 
-              </ul>
-            </td>
-          </tr>
-        </tbody></table>
-	      
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:0px">
-              <br>
-              <p style="text-align:right;font-size:small;">
-                The source of this website is from <a href="https://jonbarron.info/">here</a>.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-      </td>
-    </tr>
-  </table>
-</body>
+              </tbody></table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Work Experience</heading>
+                    <ul>
+                      <li>Reserach Intern, Naver Clova, July 2020 - Dec. 2020</li>
+                    </ul>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Academic Services</heading>
+                    <ul>
+                      <li>Conference Reviewer: AISTATS 2024</li>
+                    </ul>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Teaching Experience</heading>
+                    <ul>
+                      <li><a
+                          href="https://bi.snu.ac.kr/Courses/4ai22s/4ai22s.html">[4190.408]
+                          Artificial Intelligence</a>, Seoul National
+                        University, 2022</li>
+                      <li>Artificial Intelligence course, <a
+                          href="https://programmers.co.kr/">Programmers (Grepp)</a>,
+                        2022-2023</li>
+                      <li>NVIDIA DLI (Deep Learning Institute), NVIDIA AI
+                        Conference, 2019</li>
+                    </ul>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                  <td style="padding:20px;width:100%;vertical-align:middle">
+                    <heading>Honors and Awards</heading>
+                    <ul>
+                      <li>Mid‑way Prize (Ranked at the top of three categories),
+                        <a
+                          href="https://proceedings.mlr.press/v123/crosby20a.html">Animal-AI
+                          Olympics</a>, NeurIPS 2019 Competition</li>
+                      <li>Summa Cum Laude, 2021</li>
+                      <li>Academic Scholarship, 2018-2020</li>
+                    </ul>
+                  </td>
+                </tr>
+              </tbody></table>
 
-</html>
+            <table
+              style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                  <td style="padding:0px">
+                    <br>
+                    <p style="text-align:right;font-size:small;">
+                      The source of this website is from <a
+                        href="https://jonbarron.info/">here</a>.
+                    </p>
+                  </td>
+                </tr>
+              </tbody></table>
+          </td>
+        </tr>
+      </table>
+    </body>
+
+  </html>
