--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a graduate student at <a
+                    <p> I am a Ph.D student at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
                         University (SNU)</a>.
+                      I received my M.Sc. in Neuroscience from Seoual National University.
                       Prior to joining SNU, I did work for <a
                         href="https://clova.ai/">Naver Clova AI</a> as a
-                      research intern. I received my Bachelor's degree in
-                      Computer Science at Kookmin University.
+                      research intern. Before this, I received my Bachelor's degree in Computer Science at Kookmin University.
                     </p>
                     <p style="text-align:center">
                       <a href="mailto:yunh_kwak@snu.ac.kr">Email</a> &nbsp/&nbsp
@@ -54,7 +54,7 @@
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Research</heading>
                     <p>
-                      My research is intensely focused on reinforcement learning and causal representation learning, especially in the context of learning and reasoning methods for sequential decision-making. 
+                      My research is focused on reinforcement learning and causal representation learning, especially in the context of learning and reasoning methods for sequential decision-making. 
                     </p>
                   </td>
                 </tr>
