--- a/index.html
+++ b/index.html
@@ -80,6 +80,27 @@
               style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                 <tr>
                   <td style="padding:20px;width:25%;vertical-align:middle">
+                    <img src="images/mcts.png" alt="mcts" width="180" style="border-style: none">
+                  </td>
+                  <td width="75%" valign="middle">
+                    <a href="">
+                      <papertitle>Efficient Monte Carlo Tree Search via On-the-Fly State-Conditioned Action Abstraction</papertitle>
+                    </a>
+                    <br>
+                    <strong>Yunhyeok Kwak*</strong>, 
+                    <a href="https://bluemoon010.github.io/">Inwoo Hwang*</a>,
+              Dooyoung Kim,
+                    <a href="https://www.sanghacklee.me">Sanghack Lee</a>^,
+            Byoung-Tak Zhang^
+                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font> </li> 
+                    <p>
+                    <a href="">Paper</a> / 
+              <a href="">Code</a>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding:20px;width:25%;vertical-align:middle">
                     <img src="images/quantized_lcd.png" alt="Quantized LCD"
                       width="180"
                       style="border-style: none">
