--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a Ph.D student at <a
+                    <p> I am a Ph.D student in the Graduate School of AI at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
-                        University (SNU)</a>.
+                        University (SNU)</a>, advised by Prof. Byoung-Tak Zhang.
                       I received my M.Sc. in Neuroscience from Seoual National University.
                       Prior to joining SNU, I did work for <a
                         href="https://clova.ai/">Naver Clova AI</a> as a
@@ -113,6 +113,7 @@
                     <strong>Yunhyeok Kwak</strong>, Suhyung Choi,
                     Byoung-Tak Zhang^,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
+                    <li> International Conference on Machine Learning (<strong>ICML</strong>), 2024</li>
                     <li> ICML Workshop on Spurious Correlations, Invariance, and
                       Stability, 2023</li>
                     <!-- <br> -->
