--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
                     <img src="images/mcts.png" alt="mcts" width="180" style="border-style: none">
                   </td>
                   <td width="75%" valign="middle">
-                    <a href="">
-                      <papertitle>Efficient Monte Carlo Tree Search via On-the-Fly State-Conditioned Action Abstraction</papertitle>
-                    </a>
+                    <papertitle>Efficient Monte Carlo Tree Search via On-the-Fly State-Conditioned Action Abstraction</papertitle>
                     <br>
                     <strong>Yunhyeok Kwak*</strong>, 
                     <a href="https://bluemoon010.github.io/">Inwoo Hwang*</a>,
@@ -113,9 +111,8 @@
                     <strong>Yunhyeok Kwak</strong>, Suhyung Choi,
                     Byoung-Tak Zhang^,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
-                    <li> International Conference on Machine Learning (<strong>ICML</strong>), 2024</li>
-                    <li> ICML Workshop on Spurious Correlations, Invariance, and
-                      Stability, 2023</li>
+                    <li><em>International Conference on Machine Learning (<strong>ICML</strong>), 2024</em></li>
+                    <li><em>ICML Workshop on Spurious Correlations, Invariance, and Stability, 2023</em></li>
                     <!-- <br> -->
                     <p>
                       <a
