--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <tr>
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Publications</heading>
+                    <br>
+                    <br>
+              (* equal contribution, ^ equal advising)
                   </td>
                 </tr>
               </tbody></table>
