--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a Ph.D student in the Graduate School of AI at <a
+                    <p> I am a first-year Ph.D student in the Graduate School of AI at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
                         University (SNU)</a>, advised by Prof. Byoung-Tak Zhang.
                       I received my M.Sc. in Neuroscience from Seoual National University.
@@ -93,7 +93,7 @@
               Dooyoung Kim,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^,
             Byoung-Tak Zhang^
-                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font> </li> 
+                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font></strong></font></li> 
                     <p>
                     <a href="">Paper</a> / 
               <a href="">Code</a>
@@ -118,6 +118,8 @@
                     <li><em>ICML Workshop on Spurious Correlations, Invariance, and Stability, 2023</em></li>
                     <!-- <br> -->
                     <p>
+                      <a href="">Paper</a> / 
+                      <a href="">Code</a> /
                       <a
                         href="https://sites.google.com/view/scis-workshop-23/home">Workshop</a>
                     </p>
