--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a first-year Ph.D student in <a href="https://gsai.snu.ac.kr/">Artifical Intelligence</a> at <a
+                    <p> I am a first-year Ph.D student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
                         University (SNU)</a>, advised by Prof. Byoung-Tak Zhang.
                       I received my M.Sc. in Neuroscience from Seoual National University.
