--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <papertitle>Efficient Monte Carlo Tree Search via On-the-Fly State-Conditioned Action Abstraction</papertitle>
                     <br>
                     <strong>Yunhyeok Kwak*</strong>, 
-                    <a href="https://bluemoon010.github.io/">Inwoo Hwang*</a>,
+                    <a href="https://iwhwang.github.io/">Inwoo Hwang*</a>,
               Dooyoung Kim,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^,
             Byoung-Tak Zhang^
@@ -110,7 +110,7 @@
                     <papertitle>Causal Dynamics Learning with Quantized Local
                       Independence Discovery</papertitle>
                     <br>
-                    <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>,
+                    <a href="https://iwhwang.github.io/">Inwoo Hwang</a>,
                     <strong>Yunhyeok Kwak</strong>, Suhyung Choi,
                     Byoung-Tak Zhang^,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
@@ -134,7 +134,7 @@
                     <papertitle>On Discovery of Local Independence over
                       Continuous Variables via Neural Contextual Decomposition</papertitle>
                     <br>
-                    <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>,
+                    <a href="https://iwhwang.github.io/">Inwoo Hwang</a>,
                     <strong>Yunhyeok Kwak</strong>, Yeon-Ji Song,
                     Byoung-Tak Zhang^,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^.
@@ -156,7 +156,7 @@
                     <papertitle>SelecMix: Debiased Learning by
                       Contradicting-pair Sampling</papertitle>
                     <br>
-                    <a href="https://bluemoon010.github.io/">Inwoo Hwang</a>,
+                    <a href="https://iwhwang.github.io/">Inwoo Hwang</a>,
                     Sangjun Lee, <strong>Yunhyeok Kwak</strong>,
                     <a href="https://coallaoh.github.io">Seong Joon Oh</a>,
                     <a href="https://www.damienteney.info">Damien Teney</a>,
@@ -172,7 +172,7 @@
                       /
                       <a href="https://arxiv.org/abs/2211.02291">ArXiv</a> /
                       <!--               <a href="https://openreview.net/forum?id=cIpU8OzGSCU">Openreview</a> /  -->
-                      <a href="https://github.com/bluemoon010/selecmix">Code</a>
+                      <a href="https://github.com/iwhwang/selecmix">Code</a>
                       /
                       <a
                         href="https://openreview.net/group?id=ICML.cc/2022/Workshop/SCIS">Workshop</a>
