--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             Byoung-Tak Zhang^
                 <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font></strong></font></li> 
                     <p>
-                    <a href="">Paper</a> / 
-              <a href="">Code</a>
+                    <a href="https://openreview.net/forum?id=UvDsWevxUI">Paper</a> / 
+                    <a href="https://github.com/yun-kwak/efficient-mcts">Code</a>
                     </p>
                   </td>
                 </tr>
@@ -118,8 +118,8 @@
                     <li><em>ICML Workshop on Spurious Correlations, Invariance, and Stability, 2023</em></li>
                     <!-- <br> -->
                     <p>
-                      <a href="">Paper</a> / 
-                      <a href="">Code</a> /
+                      <a href="https://openreview.net/forum?id=mrd4e8ZJjm">Paper</a> / 
+                      <a href="https://github.com/iwhwang/Fine-Grained-Causal-RL">Code</a> /
                       <a
                         href="https://sites.google.com/view/scis-workshop-23/home">Workshop</a>
                     </p>
