--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font></strong></font></li> 
                     <p>
                     <a href="https://openreview.net/forum?id=UvDsWevxUI">Paper</a> / 
+                    <a href="https://arxiv.org/abs/2406.00614">ArXiv</a> / 
                     <a href="https://github.com/yun-kwak/efficient-mcts">Code</a>
                     </p>
                   </td>
