--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Academic Services</heading>
                     <ul>
-                      <li>Conference Reviewer: AISTATS 2024</li>
+                      <li>Conference Reviewer: AISTATS 2024, ICLR 2025, AISTATS 2025</li>
+                      <li>Workshop Reviewer: AAAI 2025 Workshop GenPlan</li>
                     </ul>
                   </td>
                 </tr>
