--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <heading>Academic Services</heading>
                     <ul>
                       <li>Conference Reviewer: AISTATS 2024, ICLR 2025, AISTATS 2025</li>
-                      <li>Workshop Reviewer: AAAI 2025 Workshop GenPlan</li>
+                      <li>Workshop Reviewer: NeurIPS 2024 Workshop Proposals, AAAI 2025 Workshop GenPlan</li>
                     </ul>
                   </td>
                 </tr>
