--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Work Experience</heading>
                     <ul>
+                      <li>RL Reserach Engineer, Krafton, Incoming</li>
                       <li>Reserach Intern, Naver Clova, July 2020 - Dec. 2020</li>
                     </ul>
                   </td>
