--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a first-year Ph.D student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
+                    <p> I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a second-year Ph.D student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
                         University (SNU)</a>, advised by Prof. Byoung-Tak Zhang.
                       I received my M.Sc. in Neuroscience from Seoual National University.
@@ -189,8 +189,8 @@
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Work Experience</heading>
                     <ul>
-                      <li>RL Reserach Engineer, Krafton, Incoming</li>
-                      <li>Reserach Intern, Naver Clova, July 2020 - Dec. 2020</li>
+                      <li>RL Research Engineer, Krafton, Mar. 2025 -</li>
+                      <li>Research Intern, Naver Clova, Jun. 2020 - Dec. 2020</li>
                     </ul>
                   </td>
                 </tr>
