--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a second-year Ph.D student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
+                    <p> I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a second-year Ph.D. student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
                         University (SNU)</a>, advised by Prof. Byoung-Tak Zhang.
-                      I received my M.Sc. in Neuroscience from Seoual National University.
-                      Prior to joining SNU, I did work for <a
+                      I received my M.Sc. in Neuroscience from Seoul National University.
+                      Prior to joining SNU, I worked at <a
                         href="https://clova.ai/">Naver Clova AI</a> as a
-                      research intern. Before this, I received my Bachelor's degree in Computer Science at Kookmin University.
+                      Research Intern. Before this, I received my Bachelor's degree in Computer Science at Kookmin University.
                     </p>
                     <p style="text-align:center">
                       <a href="mailto:yunh_kwak@snu.ac.kr">Email</a> &nbsp/&nbsp
