--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               Dooyoung Kim,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^,
             Byoung-Tak Zhang^
-                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font></strong></font></li> 
+                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font></li> 
                     <p>
                     <a href="https://openreview.net/forum?id=UvDsWevxUI">Paper</a> / 
                     <a href="https://arxiv.org/abs/2406.00614">ArXiv</a> / 
@@ -144,7 +144,7 @@
                     <p>
                       <a href="https://openreview.net/forum?id=-aFd28Uy9td">Paper</a>
                       /
-                      <a href>Code</a>
+                      <a href="https://github.com/iwhwang/Fine-Grained-Causal-RL">Code</a>
                     </p>
                   </td>
                 </tr>
