--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <a href="http://wityworks.com">Jin-Hwa Kim</a>^,
                     Byoung-Tak Zhang^.
                     <li> <em>Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>,
-                      2022 &nbsp <font color="blue"><strong>(Scholar Award)</strong></font>
+                      2022 <br> <font color="blue"><strong>(Scholar Award)</strong></font>
                     </li>
                     <li> <em>ICML Workshop on Spurious Correlations, Invariance,
                         and Stability</em>, 2022 </li>
@@ -203,7 +203,7 @@
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Academic Services</heading>
                     <ul>
-                      <li>Conference Reviewer: AISTATS 2024, ICLR 2025, AISTATS 2025</li>
+                      <li>Conference Reviewer: AISTATS 2024, ICLR 2025, AISTATS 2025, UAI 2025</li>
                       <li>Workshop Reviewer: NeurIPS 2024 Workshop Proposals, AAAI 2025 Workshop GenPlan</li>
                     </ul>
                   </td>
