--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                       <br>
                       <korname>곽윤혁</korname>
                     </p>
-                    <p> I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a second-year Ph.D. student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
+                    <p> 
+                      I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a Ph.D. student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
-                        University (SNU)</a>, advised by Prof. Byoung-Tak Zhang.
-                      I received my M.Sc. in Neuroscience from Seoul National University.
-                      Prior to joining SNU, I worked at <a
-                        href="https://clova.ai/">Naver Clova AI</a> as a
-                      Research Intern. Before this, I received my Bachelor's degree in Computer Science at Kookmin University.
+                        University (SNU)</a>, advised by Prof. Byoung-Tak Zhang. My research focuses on reinforcement learning and causal representation learning.
+                      I received M.Sc. in Neuroscience from Seoul National University and B.Sc. in Computer Science from Kookmin University.
+                      Previously, I worked as a Research Intern at <a
+                        href="https://clova.ai/">Naver Clova AI</a>.
                     </p>
                     <p style="text-align:center">
                       <a href="mailto:yunh_kwak@snu.ac.kr">Email</a> &nbsp/&nbsp
@@ -93,7 +93,7 @@
               Dooyoung Kim,
                     <a href="https://www.sanghacklee.me">Sanghack Lee</a>^,
             Byoung-Tak Zhang^
-                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral)</strong></font></li> 
+                <li> <em>Uncertainty in Artificial Intelligence (<strong>UAI</strong>)</em>, 2024 &nbsp; <font color="red"><strong>(Oral, 28/744=3.8%)</strong></font></li> 
                     <p>
                     <a href="https://openreview.net/forum?id=UvDsWevxUI">Paper</a> / 
                     <a href="https://arxiv.org/abs/2406.00614">ArXiv</a> / 
@@ -164,7 +164,7 @@
                     <a href="http://wityworks.com">Jin-Hwa Kim</a>^,
                     Byoung-Tak Zhang^.
                     <li> <em>Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>,
-                      2022 <br> <font color="blue"><strong>(Scholar Award)</strong></font>
+                      2022 &nbsp; <font color="blue"><strong>(Scholar Award)</strong></font>
                     </li>
                     <li> <em>ICML Workshop on Spurious Correlations, Invariance,
                         and Stability</em>, 2022 </li>
@@ -217,14 +217,14 @@
                   <td style="padding:20px;width:100%;vertical-align:middle">
                     <heading>Teaching Experience</heading>
                     <ul>
-                      <li><a
+                      <li>TA, <a
                           href="https://bi.snu.ac.kr/Courses/4ai22s/4ai22s.html">[4190.408]
                           Artificial Intelligence</a>, Seoul National
                         University, 2022</li>
-                      <li>Artificial Intelligence course, <a
+                      <li>Lecturer, Reinforcement Learning, Artificial Intelligence course, <a
                           href="https://programmers.co.kr/">Programmers (Grepp)</a>,
                         2022-2023</li>
-                      <li>NVIDIA DLI (Deep Learning Institute), NVIDIA AI
+                      <li>TA, NVIDIA DLI (Deep Learning Institute), NVIDIA AI
                         Conference, 2019</li>
                     </ul>
                   </td>
