--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a Ph.D. student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
                         University (SNU)</a>, advised by Prof. Byoung-Tak Zhang. My research focuses on reinforcement learning and causal representation learning.
-                      I received M.Sc. in Neuroscience from Seoul National University and B.Sc. in Computer Science from Kookmin University.
+                        I hold an M.S. in Neuroscience from Seoul National University and a B.S. in Computer Science from Kookmin University.
                       Previously, I worked as a Research Intern at <a
                         href="https://clova.ai/">Naver Clova AI</a>.
                     </p>
