--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                       <a href="https://www.semanticscholar.org/author/Yunhyeok-Kwak/2190039721">Semantic Scholar</a>
                     </p>
                     <td style="padding:2.5%;width:45%;max-width:45%">
-                      <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpg">
+                      <img style="width:100%;max-width:100%" alt="profile photo" src="images/image.png">
                     </td>
                 </tr>
               </tbody></table>
