--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p> 
                       I am a Research Engineer at <a href="https://krafton.com/">Krafton</a> and a Ph.D. student in <a href="https://gsai.snu.ac.kr/">Artificial Intelligence</a> at <a
                         href="https://www.snu.ac.kr/en/">Seoul National
-                        University (SNU)</a>, advised by Prof. Byoung-Tak Zhang. My research focuses on reinforcement learning and causal representation learning.
+                        University (SNU)</a>, advised by <a href="https://bi.snu.ac.kr/members/byoung-tak-zhang.html">Prof. Byoung-Tak Zhang</a>. My research focuses on reinforcement learning and causal representation learning.
                         I hold an M.S. in Neuroscience from Seoul National University and a B.S. in Computer Science from Kookmin University.
                       Previously, I worked as a Research Intern at <a
                         href="https://clova.ai/">Naver Clova AI</a>.
